DAAP: allow a user to provide a port for specified server

https://bugzilla.gnome.org/show_bug.cgi?id=649288
Signed-off-by: W. Michael Petullo <mike@flyn.org>